RESOLVED FIXED198363
[Async overflow scrolling] Flashes of missing layer backing store when scrolling an overflow
https://bugs.webkit.org/show_bug.cgi?id=198363
Summary [Async overflow scrolling] Flashes of missing layer backing store when scroll...
Simon Fraser (smfr)
Reported 2019-05-29 19:41:02 PDT
[Async overflow scrolling] Flashes of missing layer backing store when scrolling an overflow
Attachments
Patch (10.84 KB, patch)
2019-05-29 19:47 PDT, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews104 for mac-highsierra-wk2 (2.94 MB, application/zip)
2019-05-30 12:52 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (2.64 MB, application/zip)
2019-05-30 13:19 PDT, EWS Watchlist
no flags
Patch (12.74 KB, patch)
2019-05-30 14:19 PDT, Simon Fraser (smfr)
thorton: review+
commit-queue: commit-queue-
Archive of layout-test-results from ews105 for mac-highsierra-wk2 (2.97 MB, application/zip)
2019-05-30 17:48 PDT, EWS Watchlist
no flags
Simon Fraser (smfr)
Comment 1 2019-05-29 19:47:35 PDT
EWS Watchlist
Comment 2 2019-05-30 12:52:35 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 3 2019-05-30 12:52:37 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 4 2019-05-30 13:19:35 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 5 2019-05-30 13:19:37 PDT Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 6 2019-05-30 14:19:34 PDT
WebKit Commit Bot
Comment 7 2019-05-30 16:15:16 PDT
Comment on attachment 370978 [details] Patch Rejecting attachment 370978 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 370978, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=370978&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=198363&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 370978 from bug 198363. Fetching: https://bugs.webkit.org/attachment.cgi?id=370978 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/LayoutTests/ChangeLog' is out of date W: d564b4572eef45c156805b9ccf1100777e741a92 and refs/remotes/origin/master differ, using rebase: :040000 040000 a73752fbb0e5be730db06910394b6e24dd825246 2a3b8d96dedc282bde045dc07bbcbb69c7489081 M LayoutTests :040000 040000 2ad6fde9dd8da85ced8f0c012955d6e4590332ea 66ffc53d3ebc616d257db726794eadd69062c8fa M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/LayoutTests/ChangeLog' is out of date W: d564b4572eef45c156805b9ccf1100777e741a92 and refs/remotes/origin/master differ, using rebase: :040000 040000 a73752fbb0e5be730db06910394b6e24dd825246 2a3b8d96dedc282bde045dc07bbcbb69c7489081 M LayoutTests :040000 040000 2ad6fde9dd8da85ced8f0c012955d6e4590332ea 66ffc53d3ebc616d257db726794eadd69062c8fa M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource From https://git.webkit.org/git/WebKit ca2d9efe9da..23c1dff257a master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 245907 = ca2d9efe9da1d63c8e1ae3cc0fccd4f5b4353b7c r245908 = 23c1dff257a4febd08e2304292655fec8ef1e6e6 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output: https://webkit-queues.webkit.org/results/12332541
EWS Watchlist
Comment 8 2019-05-30 17:48:42 PDT
Comment on attachment 370978 [details] Patch Attachment 370978 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/12333234 New failing tests: tiled-drawing/tiled-backing-in-window.html
EWS Watchlist
Comment 9 2019-05-30 17:48:44 PDT
Created attachment 371005 [details] Archive of layout-test-results from ews105 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Simon Fraser (smfr)
Comment 10 2019-05-31 11:55:35 PDT
Radar WebKit Bug Importer
Comment 11 2019-05-31 11:56:36 PDT
Note You need to log in before you can comment on or make changes to this bug.